# imap_L3_processing

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_glows_integration  Dockerfile_run_local  README.md  api_test.py  environment.yaml  imap_l3_data_processor.py  pyproject.toml  requirements.txt  run_glows_integration_using_docker.sh  run_local.py  run_local.sh  run_local_docker.sh  run_local_using_docker.sh  run_local_with_upload_and_download.py  run_with_download_and_upload.sh  run_with_download_and_upload_using_docker.sh  swapi_proton_sw_speed_demo.py  test_output.txt  variable.yaml
data_product_spec_csvs/: hit_l3_product_definition_macropixel.csv  hit_l3_sectoredrates_product_definition.csv  imap_hit_l3_direct-event_variable_attrs.csv  imap_hit_l3_direct_event.csv  imap_hit_l3_direct_event_product_definitions.csv  imap_hit_l3_macropixel_variable_attrs.csv  imap_hit_l3_pitch_angle.csv  imap_hit_l3_variable_attrs.csv
imap_l3_processing/: constants.py  data_utils.py  map_descriptors.py  map_models.py  models.py  pitch_angles.py  processor.py  spice_wrapper.py  spicepy_factory.py  utils.py  version.py
imap_processing/: constants.py  data_utils.py  models.py  pitch_angles.py  processor.py  spice_wrapper.py  utils.py
scripts/: batch_download_parents.py  clean_metadata.py  compare_l2_map_metadata.py  convert_hit_event_type_to_csv.py  convert_product_definition_to_yaml.py  convert_variable_yaml_to_csv.py  fetch_latest_data.py  generate_hi_yaml.py  generate_lo_yaml.py  generate_repointing_lines.py  generate_ultra_yaml.py  generate_yaml.py  get_batch_jobs_status.py  make_cdf_all_fill.py  poll_batch_jobs_status.py  reprocess_all_in_situ.py  run_spectral_index.py  time_shift_cdf.py  truncate_cdf.py  update_version.sh  upload_swapi_l3_dependencies.py
spice_kernels/: imap_science_0001.tf  imap_science_draft.tf  imap_sclk_0000.tsc  imap_wkcp.tf
swapi/: fake_alpha_sw_temperature_density_lut_generator.py  fake_data_generator.py  fake_proton_sw_temperature_density_lut_generator.py  generate_cdf_from_dat.py  swapi_alpha_sw_speed_temperature_density_demo.py  swapi_l3a_sw_proton_speed.py  swapi_proton_sw_speed_demo.py
tests/: periodically_run_tests.json  spice_test_case.py  temp_file_test_case.py  test_cdf_utils.py  test_data_utils.py  test_helpers.py  test_imap_l3_data_processor.py  test_map_descriptors.py  test_utils.py  (+7 more)
(+6777 files in other folders)
