[project]
name = "imap_l3_processing"
version = "2025.7.28"
requires-python = ">= 3.12"
dependencies = [
    "astropy==7.0.1",
    "astropy-iers-data==0.2025.3.24.0.35.32",
    "astropy_healpix==1.1.2",
    "bitarray==3.0.0",
    "bitstring==4.3.0",
    "cdflib==1.3.4",
    "certifi==2025.1.31",
    "cftime==1.6.4.post1",
    "charset-normalizer==3.4.1",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "fonttools==4.53.1",
    "idna==3.10",
    "imap-data-access==0.31.0",
    "importlib_resources==6.4.0",
    "joblib==1.4.2",
    "kiwisolver==1.4.5",
    "lmfit==1.3.3",
    "lxml==5.3.2",
    "naif-leapseconds==2023.5.31",
    "netCDF4==1.7.2",
    "numdifftools==0.9.41",
    "numpy>=2.0.1",
    "packaging==24.1",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pyerfa==2.0.1.5",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "sammi-cdf==1.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "six==1.16.0",
    "space_packet_parser==5.0.1",
    "spacepy==0.7.0",
    "spiceypy==6.0.0",
    "threadpoolctl==3.6.0",
    "tzdata==2025.2",
    "uncertainties==3.2.2",
    "urllib3==2.4.0",
    "xarray==2025.3.1",
    "zipp==3.19.2",
    "imap_processing==0.14.0",
]

[tool.setuptools]
py-modules = ["imap_l3_processing"]

