[project]
name = "imap_l3_processing"
version = "2025.12.02"
description = "This is a package for creating IMAP Level 3 data"
requires-python = ">= 3.10"
dependencies = [
    "astropy==6.1.7",
    "astropy_healpix==1.1.2",
    "bitstring==4.3.0",
    "imap-data-access>=0.37.0",
    "lmfit==1.3.3",
    "netCDF4>=1.6",
    "numdifftools==0.9.41",
    "numpy>=2.0.1",
    "pandas==2.2.3",
    "requests==2.32.3",
    "sammi-cdf==1.0.0",
    "scikit-learn==1.6.1",
    "scipy>=1.13.1",
    "spacepy==0.7.0",
    "spiceypy==6.0.0",
    "uncertainties==3.2.2",
    "xarray==2025.3.1",
    "imap-processing>=1.0.2",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]

[tool.uv.sources]
imap-processing = { git = "https://github.com/IMAP-Science-Operations-Center/imap_processing" }

[tool.setuptools]
py-modules = ["imap_l3_processing"]

[tool.hatch]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
